[package]
name = "rust-web-actix"
version = "0.1.0"
authors = ["jiangcihuo <chiang-fire@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
actix-service = "1.0.0"

futures = "0.3.1"
env_logger = "*"
bytes = "0.5.2"
# json相关依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"
# 创建常量
lazy_static = "1.4.0"